# text-and-summary

./: .gitignore  Dockerfile.python  README.md
_assist/: dev.sh
_docker/compose/: celery.yml  nginx.yml  pg-db.yml  redis.yml  web.yml
backend-projects/: pyproject.toml
nginx/conf.d/: default.conf
nginx/ssl/: nginx-selfsigned.crt  nginx-selfsigned.key
project-text-and-summary/: README.md  example.db  prestart.py  prestart.sh  pyproject.toml  run.sh  start_db_session.py
project-text-and-summary/alembic/: env.py
project-text-and-summary/alembic/versions/: ac983f083b19_create_documents_table.py
project-text-and-summary/app/: .env.local  main.py
project-text-and-summary/app/api/: deps.py
project-text-and-summary/app/api/endpoints/: document.py
project-text-and-summary/app/core/: config.py  middlewares.py
project-text-and-summary/app/crud/: __init__.py  crud_document.py
project-text-and-summary/app/db/: base.py  session.py
project-text-and-summary/app/models/: document.py
project-text-and-summary/app/schemas/: document.py
project-text-and-summary/app/tasks/: document_tasks.py
project-text-and-summary/app/tests/: conftest.py  factories.py
project-text-and-summary/app/tests/api/: test_document.py
project-text-and-summary/app/utils/: decorators.py  query_utils.py  redis.py  string_utils.py  summarizer.py
