[tool.poetry]
name = "backend-projects"
version = "0.1.0"
description = ""
authors = ["Rustem <ss.rustem@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_projects"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
